[gd_scene load_steps=5 format=3 uid="uid://bjm5awditly3x"]

[ext_resource type="Script" path="res://scenes/enemy.gd" id="1_bsnem"]
[ext_resource type="Texture2D" uid="uid://bqw5xa4q18ak2" path="res://icon.svg" id="1_wrhkj"]
[ext_resource type="PackedScene" uid="uid://cpg7fworn2gp3" path="res://scenes/basic_projectile.tscn" id="2_m77s2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x5qbt"]
size = Vector2(127, 141.5)

[node name="Enemy" type="Area2D"]
script = ExtResource("1_bsnem")
projectile = ExtResource("2_m77s2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_x5qbt")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_wrhkj")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="LiveTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="LiveTimer" to="." method="_on_live_timer_timeout"]
